# overcodex

./: .gitignore  AGENT-SETUP.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  install-openclaw.sh  install.sh  overcodex-instructions.md  pyproject.toml  sync.sh  uninstall.sh
.github/workflows/: publish.yml
agents/: judge-sol-xhigh.toml  reviewer-sol-high.toml  scout-luna-low.toml  worker-terra-medium.toml
codex/: AGENTS-ULTRACODE.md
config/: agents-block.toml.tpl  hooks-block.toml.tpl  statusline.toml
hooks/: overcodex-ctx-lib.sh  overcodex-ctx-watch.sh  overcodex-handoff-inject.sh  overcodex-notify.sh  overcodex-precompact-offer.sh
prompts/: handoff-cancel.md  handoff-status.md  handoff.md  ultracode.md
shell/: zshrc-snippet.sh
skill/overcodex-ultracode/: SKILL.md
skill/overcodex-ultracode/agents/: openai.yaml
skill/overcodex-ultracode/references/: codex-adapter.md  openclaw-adapter.md  role-prompts.md
src/overcodex/: __init__.py  cli.py
tests/: smoke.sh
